--- a/index.html
+++ b/index.html
@@ -5,3 +5,18 @@
   </body>
 
 </html>
+  <html>
+
+    <head>
+
+        <title>I am a title!</title>
+
+    </head>
+
+    <body>
+
+        Some content.
+
+    </body>
+
+</html>
