--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
        <h1>I'm a header 1!</h1>
 <img src="https://octodex.github.com/images/vinyltocat.png">
         https://avatars.githubusercontent.com/u/95014701?v=4
-        
+        <ol>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
     </body>
 
 </html>
